--- a/Booking/BookingHotel.csproj
+++ b/Booking/BookingHotel.csproj
@@ -36,6 +36,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Models\" />
+    <Folder Include="Images\" />
     <Folder Include="View\" />
   </ItemGroup>
 
