--- a/Booking.Core/BookingHotel.Core.csproj
+++ b/Booking.Core/BookingHotel.Core.csproj
@@ -15,6 +15,8 @@
 
     <PackageReference Include="MailKit" Version="4.5.0" />
 
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.1.1" />
+
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
 
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.38" />
