feat: add upload image with city

--- a/Booking/BookingHotel.csproj
+++ b/Booking/BookingHotel.csproj
@@ -37,8 +37,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Models\" />
-    <Folder Include="ThumbnailHotel\" />
-    <Folder Include="Images\" />
+    <Folder Include="Images\ThumbnailHotel\" />
     <Folder Include="View\" />
   </ItemGroup>
 </Project>
